[project]
name = "recus"
version = "0.1.0"
description = "CLI for the rec.us court reservation API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cyclopts",
    "httpx",
    "pydantic",
    "rich",
]

[project.scripts]
recus = "recus.cli:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "pyyaml",
    "ruff",
]
